[gd_scene load_steps=8 format=3 uid="uid://cg1umnjduq8ke"]

[ext_resource type="Script" path="res://MainScene.gd" id="1_l3kck"]
[ext_resource type="PackedScene" uid="uid://c3qaepddwxgje" path="res://Menus/MainMenu.tscn" id="1_uuqs6"]
[ext_resource type="Texture2D" uid="uid://bw7j5sb3dnb8b" path="res://Transition.png" id="3_qq4oc"]
[ext_resource type="Script" path="res://Camera2D.gd" id="4_jqyxt"]

[sub_resource type="Animation" id="Animation_djwm3"]
resource_name = "transition_end"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/TransitionSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(41, 24), Vector2(31, 24), Vector2(21, 24), Vector2(11, 24), Vector2(1, 24), Vector2(-9, 24), Vector2(-19, 24), Vector2(-29, 24), Vector2(-39, 24), Vector2(-49, 24), Vector2(-59, 24)]
}

[sub_resource type="Animation" id="Animation_55ckc"]
resource_name = "transition_start"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/TransitionSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(141, 24), Vector2(131, 24), Vector2(121, 24), Vector2(111, 24), Vector2(101, 24), Vector2(91, 24), Vector2(81, 24), Vector2(71, 24), Vector2(61, 24), Vector2(51, 24), Vector2(41, 24)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wv14c"]
_data = {
"transition_end": SubResource("Animation_djwm3"),
"transition_start": SubResource("Animation_55ckc")
}

[node name="MainScene" type="Node"]
script = ExtResource("1_l3kck")

[node name="ActiveScene" type="Node" parent="."]

[node name="MainMenu" parent="ActiveScene" instance=ExtResource("1_uuqs6")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(42, 24)
process_callback = 0
script = ExtResource("4_jqyxt")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TransitionSprite" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(141, 24)
texture = ExtResource("3_qq4oc")

[node name="TransitionAnimation" type="AnimationPlayer" parent="CanvasLayer/TransitionSprite"]
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_wv14c")
}

[connection signal="animation_finished" from="CanvasLayer/TransitionSprite/TransitionAnimation" to="." method="_on_transition_animation_animation_finished"]
